Course ratings Page with add comment

--- a/RateMyCourse/WebContent/css/web-style.css
+++ b/RateMyCourse/WebContent/css/web-style.css
@@ -2376,7 +2376,7 @@ textarea.contacttextarea{
 	width:36%;
 	float:right;
 	padding: 10px 1% 10px 0px;
-	color: #d5d5d5;
+	color: #000000;
 }
 
 .contacttextboxes fieldset{
